--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- icon-->
-    <link rel="icon" type="image/png" href="public/favicon.ico">
+    <link rel="shortcut icon" href="public/favicon.ico" />
 
     <title>Vite Comics</title>
   </head>
